tests/SequenceTests/data/InvalidCommaAssign.xpl
integer main() {
  integer x;

  x ,= 0;
}
